Production/Production/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_entered__c</fullName>
        <label>Date entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_exited__c</fullName>
        <label>Date exited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instalment_Number__c</fullName>
        <label>Instalment Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_attempts__c</fullName>
        <label>Number of attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Path_Name__c</fullName>
        <label>Path Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_exit__c</fullName>
        <label>Reason for exit</label>
        <picklist>
            <picklistValues>
                <fullName>Payment received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual step change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic step change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_Communication_Code__c</fullName>
        <label>Step Communication Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Communication_Type__c</fullName>
        <label>Step Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>TTR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTR2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2P/SMS/REM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/SMS/SETUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/SMS/PDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/SMS/PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2P/TTS/REM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/TTS/SETUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/TTS/PDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/TTS/PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2P/FREM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2P/CALL/REM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_name__c</fullName>
        <label>Step name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_type__c</fullName>
        <label>Step type</label>
        <picklist>
            <picklistValues>
                <fullName>TTR1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_number__c</fullName>
        <displayFormat>ST{00000}</displayFormat>
        <label>Task number</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>